Config adjustments, hide recipes, new translations

--- a/config/openloader/resources/StrangeJourneyResourcePack/assets/minecraft/lang/en_us.json
+++ b/config/openloader/resources/StrangeJourneyResourcePack/assets/minecraft/lang/en_us.json
@@ -9,5 +9,41 @@
 	"entity.minecraft.villager.alchemist": "Alchemist",
 	"entity.minecraft.villager.archeologist": "Archeologist",
 	"entity.minecraft.villager.animal_tamer": "Animal Tamer",
-	"entity.minecraft.villager.nightwatcher": "Nightwatcher"
+	"entity.minecraft.villager.nightwatcher": "Nightwatcher",
+	"block.sophisticatedstorage.barrel": "Barrel",
+	"block.sophisticatedstorage.copper_barrel": "Copper Barrel",
+	"block.sophisticatedstorage.iron_barrel": "Iron Barrel",
+	"block.sophisticatedstorage.gold_barrel": "Gold Barrel",
+	"block.sophisticatedstorage.diamond_barrel": "Diamond Barrel",
+	"block.sophisticatedstorage.netherite_barrel": "Netherite Barrel",
+	"block.sophisticatedstorage.limited_barrel_1": "Limited Barrel I",
+	"block.sophisticatedstorage.limited_barrel_2": "Limited Barrel II",
+	"block.sophisticatedstorage.limited_barrel_3": "Limited Barrel III",
+	"block.sophisticatedstorage.limited_barrel_4": "Limited Barrel IV",
+	"block.sophisticatedstorage.limited_copper_barrel_1": "Limited Copper Barrel I",
+  "block.sophisticatedstorage.limited_copper_barrel_2": "Limited Copper Barrel II",
+  "block.sophisticatedstorage.limited_copper_barrel_3": "Limited Copper Barrel III",
+  "block.sophisticatedstorage.limited_copper_barrel_4": "Limited Copper Barrel IV",
+	"block.sophisticatedstorage.limited_iron_barrel_1": "Limited Iron Barrel I",
+	"block.sophisticatedstorage.limited_iron_barrel_2": "Limited Iron Barrel II",
+	"block.sophisticatedstorage.limited_iron_barrel_3": "Limited Iron Barrel III",
+	"block.sophisticatedstorage.limited_iron_barrel_4": "Limited Iron Barrel IV",
+	"block.sophisticatedstorage.limited_gold_barrel_1": "Limited Gold Barrel I",
+	"block.sophisticatedstorage.limited_gold_barrel_2": "Limited Gold Barrel II",
+	"block.sophisticatedstorage.limited_gold_barrel_3": "Limited Gold Barrel III",
+	"block.sophisticatedstorage.limited_gold_barrel_4": "Limited Gold Barrel IV",
+	"block.sophisticatedstorage.limited_diamond_barrel_1": "Limited Diamond Barrel I",
+	"block.sophisticatedstorage.limited_diamond_barrel_2": "Limited Diamond Barrel II",
+	"block.sophisticatedstorage.limited_diamond_barrel_3": "Limited Diamond Barrel III",
+	"block.sophisticatedstorage.limited_diamond_barrel_4": "Limited Diamond Barrel IV",
+	"block.sophisticatedstorage.limited_netherite_barrel_1": "Limited Netherite Barrel I",
+	"block.sophisticatedstorage.limited_netherite_barrel_2": "Limited Netherite Barrel II",
+	"block.sophisticatedstorage.limited_netherite_barrel_3": "Limited Netherite Barrel III",
+	"block.sophisticatedstorage.limited_netherite_barrel_4": "Limited Netherite Barrel IV",
+	"block.sophisticatedstorage.chest": "Chest",
+  "block.sophisticatedstorage.copper_chest": "Copper Chest",
+	"block.sophisticatedstorage.iron_chest": "Iron Chest",
+	"block.sophisticatedstorage.gold_chest": "Gold Chest",
+	"block.sophisticatedstorage.diamond_chest": "Diamond Chest",
+	"block.sophisticatedstorage.netherite_chest": "Netherite Chest"
 }
