Switch Alexs Caves Uranium to Radium Chloride

--- a/config/openloader/resources/StrangeJourneyResourcePack/assets/minecraft/lang/en_us.json
+++ b/config/openloader/resources/StrangeJourneyResourcePack/assets/minecraft/lang/en_us.json
@@ -48,5 +48,12 @@
 	"block.sophisticatedstorage.netherite_chest": "Netherite Chest",
 	"entity.minecraft.villager.fluix_researcher": "Fluix Researcher",
 	"entity.minecraft.villager.innkeeper": "Innkeeper",
-	"entity.minecraft.villager.mechanic": "Mechanic"
+	"entity.minecraft.villager.mechanic": "Mechanic",
+	"block.alexscaves.radrock_uranium_ore": "Radium Chloride Ore",
+	"block.alexscaves.uranium_rod": "Radioactive Fuel Rod",
+	"block.alexscaves.block_of_uranium": "Block of Radium Chloride",
+	"item.alexscaves.uranium": "Radium Chloride",
+	"item.alexscaves.uranium_shard": "Radium Chloride Shard",
+	"advancements.alexscaves.uranium.desc": "Mine Radium Chloride Ore",
+	"advancements.alexscaves.uranium_rod.desc": "Craft a Radioactive Fuel Rod"
 }
