Adds Silph Scope item, closes #130

--- a/config/openloader/resources/StrangeJourneyResourcePack/assets/minecraft/lang/en_us.json
+++ b/config/openloader/resources/StrangeJourneyResourcePack/assets/minecraft/lang/en_us.json
@@ -2,6 +2,7 @@
 	"galaxy.strangejourney.lepogearian": "Lepogearian",
 	"item.kubejs.wooden_panel": "Wooden Panel",
 	"item.kubejs.stone_panel": "Stone Panel",
+	"item.kubejs.silph_scope": "Silph Scope",
 	"entity.minecraft.villager.stargazer": "Stargazer",
 	"entity.minecraft.villager.wrangler": "Wrangler",
 	"entity.minecraft.villager.shoveler": "Shoveler",
