--- a/config/openloader/resources/StrangeJourneyResourcePack/assets/strangejourney/lang/en_us.json
+++ b/config/openloader/resources/StrangeJourneyResourcePack/assets/strangejourney/lang/en_us.json
@@ -2,10 +2,10 @@
 	"tag.item.strangejourney.variant_crafting_disabled": "Uncraftable Variant Blocks",
 	"tag.item.strangejourney.variant_crafting_enabled": "Craftable Variant Blocks",
 	"tag.item.strangejourney.chipped_blocks": "Chipped Blocks",
-	"tag.item.strangejourney.chipped_table": "Chipped Crafting Tables",
+	"tag.item.strangejourney.chipped_tables": "Chipped Crafting Tables",
 	"tag.item.strangejourney.chutes": "Chutes",
 	"tag.item.strangejourney.foliage_carpets": "Foliage Carpets",
-	"tag.item.strangejourney.mod_overlap": "Disabled Due to Feature Overlap",
+	"tag.item.strangejourney.mod_overlap": "Items Disabled Due to Feature Overlap",
 	"tag.item.strangejourney.sequenced_assembly_intermediaries": "Unfinished Create Assembly Items",
 	"tag.item.strangejourney.sophisticatedstorage_balance_disabled": "Items Disabled For Balance",
 	"tag.item.strangejourney.sophisticatedstorage_upgrade": "Sophisticated Storage Upgrades",
